test/1.2/errors/T_ELAYOUT.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;
bitorder be;

typedef struct {
    bitfields 8 {
        uint8 a @ [0:7];
    } b;
} bitfield_t;

typedef layout "big-endian" {
    /// ERROR ELAYOUT
    bitfield_t one;
} l1;

typedef layout "big-endian" {
    /// ERROR ELAYOUT
    bitfield_t test_lines[2];
} l2;

typedef layout "big-endian" {
    /// ERROR ELAYOUT
    double f;
} l3;

// not a whole byte

typedef layout "big-endian" {
    /// ERROR ELAYOUT
    bitfields 1 {
        uint1 a @ [0:0];
    } bf;
} l4;

typedef layout "big-endian" {
    /// ERROR ELAYOUT
    uint12 x;
    /// ERROR ELAYOUT
    uint20 y;
} l5;

method init() {
    local int i = 4;
    local layout "big-endian" {
        /// ERROR ELAYOUT
        uint8 x[i];
    } l6;
}
